<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- University -->
        <TextView
            android:id="@+id/tv_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            tools:text="@string/tv_uname"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- Year -->
        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_avg"
            android:layout_centerVertical="true"
            android:layout_marginEnd="55dp"
            tools:text="@string/tv_year"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- Average CGPA -->
        <TextView
            android:id="@+id/tv_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            tools:text="@string/tv_avg"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- Minimum CGPA -->
        <TextView
            android:id="@+id/tv_mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_avg"
            android:layout_centerVertical="true"
            android:layout_marginStart="55dp"
            tools:text="@string/tv_mini"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- Maximum CGPA -->
        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            tools:text="@string/tv_max"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>