<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/background"
    tools:context=".GPACalculator" >

    <!-- Backward Button -->
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_logout_40dp"
        android:contentDescription="@string/btn_back" />

    <!-- Sem 1 GPA -->
    <LinearLayout
        android:id="@+id/layout_sem1"
        android:layout_below="@+id/btn_back"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_sem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sem1"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/text_input_sem1"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Sem 2 GPA -->
    <LinearLayout
        android:id="@+id/layout_sem2"
        android:layout_below="@+id/layout_sem1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/tv_sem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sem2"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/text_input_sem2"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Sem 3 GPA -->
    <LinearLayout
        android:id="@+id/layout_sem3"
        android:layout_below="@+id/layout_sem2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/tv_sem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sem3"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/text_input_sem3"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Sem 4 GPA -->
    <LinearLayout
        android:id="@+id/layout_sem4"
        android:layout_below="@+id/layout_sem3"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/tv_sem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sem4"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sem4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/text_input_sem4"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Text View for CGPA -->
    <TextView
        android:id="@+id/tv_cgpa"
        android:layout_below="@+id/layout_sem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <!-- Bottom Button -->
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true" >

        <!-- Calculate Button -->
        <android.support.v7.widget.CardView
            android:id="@+id/btn_calculate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/colorAccent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_calculate"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!-- Clear Button -->
        <android.support.v7.widget.CardView
            android:id="@+id/btn_clear"
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/colorAccent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_clear"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>